= HEAD

* Make send_file in sinatra_helpers plugin work with Rack 2 (jeremyevans)

* Make :header matcher prefixes the env key with HTTP_ if application :header_matcher_prefix option is set (timothypage, jeremyevans) (#69)

* Add content_for plugin :append option to support appending to the existing content (evanleck, jeremyevans) (#66)

= 2.14.0 (2016-05-13)

* Add symbol_status plugin for using symbols as status codes (Papierkorb) (#65)

* Make middleware plugin also run the application's middleware (jeremyevans)

= 2.13.0 (2016-04-14)

* Add :check_paths and :allowed_paths to render plugin options to avoid security issues with template rendering (jeremyevans)

= 2.12.0 (2016-03-15)

* Allow error handler access to the request's remaining_path (jeremyevans)

* Add optimized_string_matchers plugin, containing optimized matchers for single string arguments (jeremyevans)

* Optimize string matching code for strings without placeholders for up to a 60% performance increase (jeremyevans)

* Optimize symbol matching code for up to a 60% performance increase (jeremyevans)

= 2.11.0 (2016-02-16)

* Support :scope option in render plugin, for specifying object in which to evaluate the template (jeremyevans)

* Make minjs compressor support in assets plugin support latest version of Minjs (jeremyevans)

* Add params_capturing plugin, for storing matcher captures in the request params (jeremyevans)

= 2.10.0 (2016-01-15)

* Do not override existing Content-Type header in json plugin (jeremyevans)

* Add :content_type option to json plugin to override Content-Type header used (Kyrremann) (#58)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

* Add Streaming::Stream#write method so that IO.copy_stream will work (janko-m) (#56)

= 2.9.0 (2015-12-15)

* Support passing the content as a string argument instead of a block in the content_for plugin (badosu) (#52)

= 2.8.0 (2015-11-16)
